fix: Upgrade Hibernate to version 6.6 - Meeds-io/meeds#3365 (#520)
This change will upgrade Hibernate to version 6.6 which introduced a bug
fix (as explained in
https://discourse.hibernate.org/t/instance-save-transient-before/10293/2)
which makes some operations buggy when made in the same transaction.
This change ensures to split operations to not hit such a problem.